--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-Bekewei Egbekun, Ben Salès Salès
+# This file lists all contributors to the repository.
+
+Bekewei Egbekun <egbekunbikey@gmail.com>
+Ben Salès Salès 
