--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
 Bekewei Egbekun <egbekunbikey@gmail.com>
-Ben Salès Salès 
+Ben Salès Salès <adebsa2401@gmail.com> 
